--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        agp_version = '7.0.4'
+        kotlin_version = '1.6.21'
+        kotlin_coroutine = "1.6.0"
+        ktx = "1.6.0"
+        appcompat = "1.3.0"//1.4.0 1.3.1
+        material = "1.3.0"//1.5.0  1.4.0
+        activity = "1.3.0"//1.4.0
+        constraintLayout = "2.1.3"
+        hilt_version = '2.40'
+    }
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
@@ -20,7 +27,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
