--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     // Added Dependencies
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation "androidx.activity:activity-ktx:$ktx"
+    implementation "androidx.activity:activity-ktx:1.3.0"
 
     //Dagger
     implementation "com.google.dagger:hilt-android:$hilt_version"
